# procurement-etl-airflow

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
bi/metabase/: README.md
bi/metabase/queries/: kpi_latest_week.sql  top_suppliers_latest.sql  weekly_line_count.sql  weekly_open_value.sql
checkpoints/: README.md  check_module_00.py  check_module_01.py  check_module_02.py  check_module_03.py  check_module_04.py  check_module_05.py  check_module_06.py  check_module_07.py  check_module_08.py  check_module_09.py  check_module_10.py  check_module_11.py  check_module_12.py  check_module_13.py  run.py
config/datasets/: all_prs.yml  open_po.yml
dags/: README.md  weekly_procurement_etl.py
datagen/: README.md  __init__.py  __main__.py  cli.py  datasets.py  dirty.py  generate.py  seeds.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: mart_open_po_weekly.sql  mart_top_suppliers.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_all_prs.sql  stg_open_po.sql
dbt/seeds/: rates.csv
etl/: README.md  __init__.py  __main__.py  cli.py  column_resolver.py  dates.py  etl_log.py  extract.py  keys.py  load.py  notify.py  pipeline.py  quality.py  storage.py
etl/transform/: __init__.py
sql/init/: 01_schemas.sql  02_tables.sql  03_meta.sql
tests/: conftest.py  test_archetypes.py  test_bi_queries.py  test_datagen.py  test_dates.py  test_extract_resolve.py  test_keys.py  test_load.py  test_notify.py  test_quality.py  test_smoke.py  test_storage.py  test_transform.py
